Update github action to report errors

--- a/.github/workflows/maven-build-caching-samples-verification.yml
+++ b/.github/workflows/maven-build-caching-samples-verification.yml
@@ -26,8 +26,9 @@ jobs:
         id: mvn-build
         working-directory: ./build-caching-maven-samples
         run: |
+          set -o pipefail
           ./mvnw -B clean verify -Dgradle.enterprise.url=https://ge.solutions-team.gradle.com -Dorg.slf4j.simpleLogger.log.gradle.goal.cache=debug 2>&1 | tee -a /tmp/gradle-build.log
-          echo ::set-output name=hasUnknownParams::$(grep "Build caching was not enabled for this goal execution because the following parameters were not handled" /tmp/gradle-build.log | wc -l)    
+          echo ::set-output name=hasUnknownParams::$(grep "Build caching was not enabled for this goal execution because the following parameters were not handled" /tmp/gradle-build.log | wc -l)
       - name: Fail if unmapped mojo parameters
         run: exit 1
         if:  steps.mvn-build.outputs.hasUnknownParams != '0'
