Add new parameter to ignore list

--- a/build-caching-maven-samples/exec-yarn-project/pom.xml
+++ b/build-caching-maven-samples/exec-yarn-project/pom.xml
@@ -146,6 +146,7 @@
                           <ignore>basedir</ignore>
                           <ignore>buildDirectory</ignore>
                           <ignore>pluginDependencies</ignore>
+                          <ignore>inheritIo</ignore>
                           <ignore>project</ignore>
                           <ignore>session</ignore>
                         </ignoredProperties>
