Make Configuration cache compatible

--- a/build-data-capturing-gradle-samples/capture-os-processes/gradle-os-processes.gradle
+++ b/build-data-capturing-gradle-samples/capture-os-processes/gradle-os-processes.gradle
@@ -12,27 +12,30 @@ if (!buildScanApi) {
 }
 
 buildScan.background { api ->
-    captureOsProcesses(api)
+    Capture.captureOsProcesses(api)
 }
 
-static void captureOsProcesses(def api) {
-    def psOutput = execAndGetStdout('ps', '-o pid,ppid,time,command')
-    api.value 'OS processes', psOutput
-}
+class Capture {
 
-static String execAndGetStdout(String... args) {
-    Process process = args.toList().execute()
-    try {
-        def standardText = process.inputStream.withStream { s -> s.getText(Charset.defaultCharset().name()) }
-        def ignore = process.errorStream.withStream { s -> s.getText(Charset.defaultCharset().name()) }
-
-        def finished = process.waitFor(10, TimeUnit.SECONDS)
-        finished && process.exitValue() == 0 ? trimAtEnd(standardText) : null
-    } finally {
-        process.destroyForcibly()
+    static void captureOsProcesses(def api) {
+        def psOutput = execAndGetStdout('ps', '-o pid,ppid,time,command')
+        api.value 'OS processes', psOutput
     }
-}
 
-static String trimAtEnd(String str) {
-    ('x' + str).trim().substring(1)
+    static String execAndGetStdout(String... args) {
+        Process process = args.toList().execute()
+        try {
+            def standardText = process.inputStream.withStream { s -> s.getText(Charset.defaultCharset().name()) }
+            def ignore = process.errorStream.withStream { s -> s.getText(Charset.defaultCharset().name()) }
+
+            def finished = process.waitFor(10, TimeUnit.SECONDS)
+            finished && process.exitValue() == 0 ? trimAtEnd(standardText) : null
+        } finally {
+            process.destroyForcibly()
+        }
+    }
+
+    static String trimAtEnd(String str) {
+        ('x' + str).trim().substring(1)
+    }
 }
