--- a/build-data-capturing-gradle-samples/capture-quality-check-issues/gradle-quality-check-issues.gradle
+++ b/build-data-capturing-gradle-samples/capture-quality-check-issues/gradle-quality-check-issues.gradle
@@ -8,7 +8,7 @@ if (!buildScanApi) {
     return
 }
 
-//def capture = new Capture()
+//FIXME Make Configuration cache compatible
 
 gradle.taskGraph.beforeTask { task ->
     if (!Capture.ReportingTask.isSupported(task)) {
