--- a/.github/workflows/gradle-data-capturing-samples-verification.yml
+++ b/.github/workflows/gradle-data-capturing-samples-verification.yml
@@ -39,6 +39,9 @@ jobs:
         run: |
           # apply sample file
           echo "apply from: file(\"../build-data-capturing-gradle-samples/${{matrix.sample-file}}\")" >> common-gradle-enterprise-gradle-configuration/build.gradle
-      - name: Run Gradle build
+      - name: Run Gradle build with Groovy scripts
         working-directory: common-gradle-enterprise-gradle-configuration
-        run: ./gradlew tasks
+        run: ./gradlew tasks   
+      - name: Run Gradle build with Kotlin scripts
+        working-directory: common-gradle-enterprise-gradle-configuration
+        run: ./gradlew tasks -c settings.gradle.kts
