--- a/.github/workflows/gradle-data-capturing-samples-verification.yml
+++ b/.github/workflows/gradle-data-capturing-samples-verification.yml
@@ -41,4 +41,8 @@ jobs:
           echo "apply from: file(\"../build-data-capturing-gradle-samples/${{matrix.sample-file}}\")" >> common-gradle-enterprise-gradle-configuration/build.gradle
       - name: Run Gradle build
         working-directory: common-gradle-enterprise-gradle-configuration
-        run: ./gradlew tasks
+        run: ./gradlew tasks   
+      - name: Run Gradle build with Kotlin scripts
+        if: ${{ matrix.name == 'Dependency resolution' }}
+        working-directory: common-gradle-enterprise-gradle-configuration
+        run: ./gradlew tasks -c settings.gradle.kts
