--- a/build-data-capturing-gradle-samples/capture-thermal-throttling/gradle-thermal-throttling.gradle
+++ b/build-data-capturing-gradle-samples/capture-thermal-throttling/gradle-thermal-throttling.gradle
@@ -33,10 +33,8 @@ def throttlingServiceProvider = gradle.sharedServices.registerIfAbsent("thermalT
 throttlingServiceProvider.get()
 
 // Process results on build completion
-buildScan {
-  buildFinished { def result ->
-    throttlingServiceProvider.get().processResults(buildScanApi)
-  }
+buildScan.buildFinished { def result ->
+  throttlingServiceProvider.get().processResults(buildScanApi)
 }
 
 // Thermal Throttling service implementation
