--- a/build-data-capturing-gradle-samples/capture-thermal-throttling/gradle-thermal-throttling.gradle
+++ b/build-data-capturing-gradle-samples/capture-thermal-throttling/gradle-thermal-throttling.gradle
@@ -21,20 +21,24 @@ import java.util.function.Function
  * <code> apply from: file('gradle-thermal-throttling.gradle') </code>
  */
 
-def buildScanApi = project.extensions.findByName('buildScan')
-if (!buildScanApi) {
-  return
-}
+if (OperatingSystem.current().macOsX) {
+  def buildScanApi = project.extensions.findByName('buildScan')
+  if (!buildScanApi) {
+    return
+  }
 
-// Register Thermal throttling service
-def throttlingServiceProvider = gradle.sharedServices.registerIfAbsent("thermalThrottling", ThermalThrottlingService.class) {}
+  // Register Thermal throttling service
+  def throttlingServiceProvider = gradle.sharedServices.registerIfAbsent("thermalThrottling", ThermalThrottlingService.class) {}
 
-// Start Thermal throttling service
-throttlingServiceProvider.get()
+  // Start Thermal throttling service
+  throttlingServiceProvider.get()
 
-// Process results on build completion
-buildScan.buildFinished { def result ->
-  throttlingServiceProvider.get().processResults(buildScanApi)
+  // Process results on build completion
+  buildScan.buildFinished { def result ->
+    throttlingServiceProvider.get().processResults(buildScanApi)
+  }
+} else {
+  println "INFO - Not running on MacOS - no thermal throttling data will be captured"
 }
 
 // Thermal Throttling service implementation
@@ -43,32 +47,28 @@ abstract class ThermalThrottlingService implements BuildService<BuildServicePara
   /**
    * Sampling interval can be adjusted according to total build time.
    */
-  def static final SAMPLING_INTERVAL_IN_SECONDS = 5
+  def SAMPLING_INTERVAL_IN_SECONDS = 5
 
   /**
    * Throttling levels by throttling average value.
    */
-  def static final THROTTLING_LEVEL =
+  def THROTTLING_LEVEL =
           [
                   [level: "THROTTLING_HIGH", range: 0..40],
                   [level: "THROTTLING_MEDIUM", range: 40..80],
                   [level: "THROTTLING_LOW", range: 80..100]
           ]
 
-  def static final COMMAND_ARGS = ["pmset", "-g", "therm"]
-  def static final COMMAND_OUTPUT_PARSING_PATTERN = /CPU_Speed_Limit\s+=\s+/
+  def COMMAND_ARGS = ["pmset", "-g", "therm"]
+  def COMMAND_OUTPUT_PARSING_PATTERN = /CPU_Speed_Limit\s+=\s+/
 
-  def final scheduler
-  def final samples
+  def scheduler
+  def samples
 
   ThermalThrottlingService() {
     scheduler = Executors.newScheduledThreadPool(1)
     samples = new ConcurrentLinkedQueue<Integer>()
-    if (OperatingSystem.current().macOsX) {
-      scheduler.scheduleAtFixedRate(new ProcessRunner(COMMAND_ARGS, this::processCommandOutput), 0, SAMPLING_INTERVAL_IN_SECONDS, TimeUnit.SECONDS)
-    } else {
-      println "WARNING - Not running on MacOS - no thermal throttling data will be captured"
-    }
+    scheduler.scheduleAtFixedRate(new ProcessRunner(COMMAND_ARGS, this::processCommandOutput), 0, SAMPLING_INTERVAL_IN_SECONDS, TimeUnit.SECONDS)
   }
 
   @Override
@@ -105,8 +105,8 @@ abstract class ThermalThrottlingService implements BuildService<BuildServicePara
 // Process Runner implementation
 class ProcessRunner implements Runnable {
 
-  private final List<String> args
-  Function<String, Integer> outputProcessor
+  private List<String> args
+  private Function<String, Integer> outputProcessor
 
   ProcessRunner(List<String> args, Function<String, Integer> outputProcessor) {
     this.args = args
