Specify GE version requirement for build cache auth snippet

--- a/common-gradle-enterprise-gradle-configuration/settings.gradle
+++ b/common-gradle-enterprise-gradle-configuration/settings.gradle
@@ -21,13 +21,15 @@ buildCache {
         enabled = true
     }
 
-    // Use the Gradle Enterprise connector's access key based authentication
+    // Use the Gradle Enterprise connector's access key based authentication.
+    // This is available in Gradle Enterprise 2022.3+ and Gradle Enterprise Plugin 3.11+.
     remote(gradleEnterprise.buildCache) {
         enabled = true
         push = isCI
     }
 
-    // Use Gradle's built-in access credentials
+    // Use Gradle's built-in access credentials.
+    // This is available in all Gradle Enterprise and Gradle Enterprise Plugin versions.
     /**
     remote(HttpBuildCache) {
         url = 'https://enterprise-samples.gradle.com/cache/' // adjust to your build cache node, and note the trailing slash
