Align Maven and Gradle implementation

--- a/build-data-capturing-gradle-samples/capture-thermal-throttling/gradle-thermal-throttling.gradle
+++ b/build-data-capturing-gradle-samples/capture-thermal-throttling/gradle-thermal-throttling.gradle
@@ -36,11 +36,13 @@ if (OperatingSystem.current().macOsX) {
   }
 
   buildScan.buildFinished { def result ->
-    // Process results on build completion
-    throttlingServiceProvider.get().processResults(buildScanApi)
-
-    // Having an AutoCloseable service is not enough in some situations
-    throttlingServiceProvider.get().close()
+    try {
+      // process results on build completion
+      throttlingServiceProvider.get().processResults(buildScanApi)
+    } finally {
+      // stop service
+      throttlingServiceProvider.get().close()
+    }
   }
 } else {
   println "INFO - Not running on MacOS - no thermal throttling data will be captured"
