Use try-with-resources

--- a/build-data-capturing-gradle-samples/capture-thermal-throttling/gradle-thermal-throttling.gradle
+++ b/build-data-capturing-gradle-samples/capture-thermal-throttling/gradle-thermal-throttling.gradle
@@ -36,12 +36,9 @@ if (OperatingSystem.current().macOsX) {
   }
 
   buildScan.buildFinished { def result ->
-    try {
+    try (def service = throttlingServiceProvider.get()) {
       // process results on build completion
-      throttlingServiceProvider.get().processResults(buildScanApi)
-    } finally {
-      // stop service
-      throttlingServiceProvider.get().close()
+      service.processResults(buildScanApi)
     }
   }
 } else {
