new project common-gradle-enterprise-gradle-configuration using kts

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -22,6 +22,10 @@ updates:
     directory: "common-gradle-enterprise-gradle-configuration"
     registries:
       - gradle-plugin-portal
+  - package-ecosystem: "gradle"
+    directory: "common-gradle-enterprise-gradle-configuration-kts"
+    registries:
+        - gradle-plugin-portal
     schedule:
       interval: "daily"
   - package-ecosystem: "gradle"
