missing schedule for groovy

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -22,10 +22,12 @@ updates:
     directory: "common-gradle-enterprise-gradle-configuration-groovy"
     registries:
       - gradle-plugin-portal
+    schedule:
+      interval: "daily"
   - package-ecosystem: "gradle"
     directory: "common-gradle-enterprise-gradle-configuration-kts"
     registries:
-        - gradle-plugin-portal
+      - gradle-plugin-portal
     schedule:
       interval: "daily"
   - package-ecosystem: "gradle"
