--- a/.github/workflows/gradle-data-capturing-samples-verification.yml
+++ b/.github/workflows/gradle-data-capturing-samples-verification.yml
@@ -11,6 +11,8 @@ jobs:
         include:
           - name: 'Dependency resolution'
             sample-file: 'capture-dependency-resolution/gradle-dependency-resolution.gradle'
+          - name: 'GE Gradle plugin version'
+            sample-file: 'capture-ge-plugin-version/gradle-ge-plugin-version.gradle'
           - name: 'Git diffs'
             sample-file: 'capture-git-diffs/gradle-git-diffs.gradle'
           - name: 'OS processes'
@@ -23,10 +25,10 @@ jobs:
             sample-file: 'capture-slow-workunit-executions/gradle-slow-task-executions.gradle'
           - name: 'Test task system properties'
             sample-file: 'capture-test-execution-system-properties/gradle-test-execution-system-properties.gradle'
+          - name: 'Test PTS support'
+            sample-file: 'capture-test-pts-support/gradle-test-pts-support.gradle'
           - name: 'Thermal throttling'
             sample-file: 'capture-thermal-throttling/gradle-thermal-throttling.gradle'
-          - name: 'GE Gradle plugin version'
-            sample-file: 'capture-ge-plugin-version/gradle-ge-plugin-version.gradle'
     steps:
       - name: Checkout
         uses: actions/checkout@v3
