--- a/.github/workflows/gradle-data-capturing-samples-verification.yml
+++ b/.github/workflows/gradle-data-capturing-samples-verification.yml
@@ -41,13 +41,13 @@ jobs:
         run: |
           # apply sample file
           echo "apply from: file(\"../build-data-capturing-gradle-samples/${{matrix.sample-file}}\")" >> common-gradle-enterprise-gradle-configuration-groovy/build.gradle
-      - name: Run Gradle build with Groovy scripts
+      - name: Run Gradle build using Groovy DSL
         working-directory: common-gradle-enterprise-gradle-configuration-groovy
         run: ./gradlew tasks
       - name: Inject data capture script into Gradle build using Kotlin DSL
         run: |
           # apply sample file
           echo "apply from: file(\"../build-data-capturing-gradle-samples/${{matrix.sample-file}}\")" >> common-gradle-enterprise-gradle-configuration-kts/build.gradle
-      - name: Run Gradle build with Kotlin scripts
+      - name: Run Gradle build using Kotlin DSL
         working-directory: common-gradle-enterprise-gradle-configuration-kts
         run: ./gradlew tasks
