Use -B instead of long form --batch-mode

--- a/.github/workflows/maven-data-capturing-samples-verification.yml
+++ b/.github/workflows/maven-data-capturing-samples-verification.yml
@@ -43,7 +43,7 @@ jobs:
         run: |
           delimiter="$(openssl rand -hex 8)"
           echo "mavenOutput<<${delimiter}" >> $GITHUB_OUTPUT
-          echo "$(mvn -f common-gradle-enterprise-maven-configuration/pom.xml -Dgradle.enterprise.url=https://ge.solutions-team.gradle.com -X --batch-mode clean validate)" >> $GITHUB_OUTPUT
+          echo "$(mvn -f common-gradle-enterprise-maven-configuration/pom.xml -Dgradle.enterprise.url=https://ge.solutions-team.gradle.com -X -B clean validate)" >> $GITHUB_OUTPUT
           echo "${delimiter}" >> $GITHUB_OUTPUT
         env:
           GRADLE_ENTERPRISE_ACCESS_KEY: ${{ secrets.GE_SOLUTIONS_ACCESS_TOKEN }}
